--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "chart.js": "^2.9.3",
+        "pulltorefreshjs": "^0.1.20",
         "tailwindcss": "^1.1.4",
         "vue-chartjs": "^3.5.0"
     }
