--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "postinstall": "npm run production"
     },
     "devDependencies": {
+        "@fullhuman/postcss-purgecss": "^1.3.0",
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
+        "laravel-mix-purgecss": "^4.2.0",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
@@ -26,5 +29,9 @@
         "pulltorefreshjs": "^0.1.20",
         "tailwindcss": "^1.1.4",
         "vue-chartjs": "^3.5.0"
-    }
+    },
+    "engines": {
+        "node": "7.6.0",
+        "yarn": "0.21.3"
+    },
 }
