--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=0a2f22836c17e06b058e",
+    "/css/app.css": "/css/app.css?id=e0a3894b8e2b0f21c381"
 }
