--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "postinstall": "npm run production"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
         "@fullhuman/postcss-purgecss": "^1.3.0",
@@ -29,9 +28,5 @@
         "pulltorefreshjs": "^0.1.20",
         "tailwindcss": "^1.1.4",
         "vue-chartjs": "^3.5.0"
-    },
-    "engines": {
-        "node": "7.6.0",
-        "yarn": "0.21.3"
-    },
+    }
 }
